--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <main>
     <form id="add-todo">
       <input type="text" name="description" id="description" value="">
-      <input type="submit" name="" value="Submit">
+      <input type="submit" name="" value="Submit" id="submit">
     </form>
     <div id = "todo-container">
         <ul>
         </ul>
     </div>
-   
+  </main>
   </body>
   <script type="text/javascript" src = "./logic.js"></script>
   <script type="text/javascript" src = "./dom.js"></script>
